--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,10 @@
 body {
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  text-align: center;
+}
+
+.pokemon-caard img {
+  width: 300px;
+  height: 412px;
+  margin-top: 10px;
 }
 
