Conclusão mais de um projeto de treinamento de JavaScript, HTML e CSS

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,7 +2,7 @@ body {
   text-align: center;
 }
 
-.pokemon-caard img {
+.pokemon-card img {
   width: 300px;
   height: 412px;
   margin-top: 10px;
